--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 This is the code and tools to build a 'Tool' plugin for the Arduino IDE (based on the Processing IDE). The tool this builds will enable uploading an Arduino sketch to a bugduino module via a network connection.
 
-= FetchAndBuild.sh =
 
+= Setup.sh = 
+Run the first time you check this out, to setup the environemnt to build the bugduino tool.
+
+= Make.sh  = 
+Builds the bugduino tool, and copies it into ~/sketchbook/tool/<TOOLNAME> if possible. 
 
